Navbar no longer overlaps main content

--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -6,7 +6,7 @@ h1{
 }
 
 .top-h1{
-    transform: translate(20px, -150px);
+    /* transform: translate(20px, -150px); */
 }
 
 .left-h1{
@@ -47,16 +47,16 @@ p{
     font-weight: normal;
 }
 
-.wrapper{
+main{
     scroll-snap-type: y mandatory;
-    max-height: calc(100vh - 80px);
+    max-height: calc(100vh - 100px);
     overflow-y: scroll;
     padding: 10px;
 }
 
 .welcome, .about, .projects, .contact{
     scroll-snap-align: start;
-    height: calc(100vh - 60px);
+    height: calc(100vh - 80px);
     /* border: 1px solid white; */
 }
 
