--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -7,9 +7,7 @@
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
-    position: sticky;
-    top: 0;
-    background-color: var(--xiketic)
+    background-color: var(--xiketic);
   }
   
   a:link { 
