--- a/src/index.css
+++ b/src/index.css
@@ -23,9 +23,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--xiketic);
   color: var(--cosmic-cobalt);
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  display: flex;
+  flex-direction:column;
+  align-items:stretch;
 }
